--- a/src/components/FileUploader/FileUploader.module.scss
+++ b/src/components/FileUploader/FileUploader.module.scss
@@ -20,7 +20,7 @@
     align-items: center;
     width: 300px;
     height: 200px;
-    border: 3px dashed blue;
+    border: 3px dashed #0000ff;
     border-radius: 20px;
     filter: drop-shadow(-1px 1px 3px rgb(13, 10, 222));
     &_ico {
