--- a/src/components/FileUploader/FileUploader.module.scss
+++ b/src/components/FileUploader/FileUploader.module.scss
@@ -1,9 +1,25 @@
+@mixin mainDesign {
+  border: none;
+  border-radius: 20px;
+  box-shadow: rgba(0, 0, 0, 0.4) 0px 2px 4px 0px,
+    rgba(0, 0, 0, 0.3) 0px 7px 13px -3px,
+    rgba(0, 0, 0, 0.2) 0px -3px 0px 0px inset;
+}
+
 .root {
   height: calc(100vh - 160px);
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
+}
+.spinner {
+  display: flex;
+  width: 100px;
+  height: 100px;
+  padding: 10px;
+  margin: 10px;
+  border-radius: 50%;
 }
 .uploader {
   text-align: center;
@@ -15,14 +31,12 @@
     display: none;
   }
   &__dropZone {
+    @include mainDesign;
     display: flex;
     justify-content: center;
     align-items: center;
-    width: 300px;
+    width: 400px;
     height: 200px;
-    border: 3px dashed #0000ff;
-    border-radius: 20px;
-    filter: drop-shadow(-1px 1px 3px rgb(13, 10, 222));
     &_ico {
       font-size: 50px;
     }
@@ -30,20 +44,40 @@
 }
 .previewFilesContainer {
   .previewList {
+    position: relative;
+
     &__item {
+      @include mainDesign;
       margin: 10px 0;
-      width: 300px;
-      min-height: 200px;
+      width: 340px;
+      height: 100px;
       display: flex;
       align-items: center;
-      border: 2px dashed #0000ff;
-      border-radius: 20px;
+
+      &_description {
+        line-height: 1.4;
+      }
 
       &_ico {
         width: 100px;
         height: 100px;
         padding: 10px;
         margin: 10px;
+        border-radius: 50%;
+      }
+    }
+
+    &__deleteButton {
+      @include mainDesign;
+      position: absolute;
+      right: 0;
+      height: 100px;
+      width: 50px;
+      background: inherit;
+      cursor: pointer;
+      &:active {
+        box-shadow: rgba(0, 0, 0, 0.05) 0px 0px 0px 1px,
+          rgb(209, 213, 219) 0px 0px 0px 1px inset;
       }
     }
   }
